fixed list item overflow issue (#7) improved image alignment in pagination decreased default width (now 300px, 75% of before)

--- a/assets/stylesheets/record_select.css
+++ b/assets/stylesheets/record_select.css
@@ -1,5 +1,5 @@
 .record-select {
-  width: 400px;
+  width: 300px;
   border: 1px solid #afd0f5;
   font-family: sans-serif;
   background-color: #fff;
@@ -24,7 +24,7 @@
 
 .record-select ol a {
   display: block;
-  width: 100%;
+  zoom: 1;
   background-color: #e6f2ff;
   padding: 2px 4px;
 }
@@ -43,6 +43,10 @@
 
 .record-select ol .next a {
   border-top: 1px solid #afd0f5;
+}
+
+.record-select ol .pagination a img {
+  vertical-align: middle;
 }
 
 .record-select ol a:hover {
